Updating scripts to use new .json CO2 evolutions, and generate values for manuscript.

--- a/Trudgill_et_al_202X/.dvc/config
+++ b/Trudgill_et_al_202X/.dvc/config
@@ -1,4 +1,6 @@
 [core]
     remote = private_papers
+[cache]
+    type = copy
 ['remote "private_papers"']
     url = s3://st-andrews-isotope-geochemistry-private/GitHub
